[package]
name = "final_project"
version = "0.1.0"
edition = "2021"

[dependencies]
linfa          = "0.7"
linfa-linear = "0.7"  
ndarray        = "0.15.6"
csv           = "1.2"        # if you read CSVs
serde         = { version = "1.0", features = ["derive"] }
clap          = { version = "4.3", features = ["derive"] }
rand = "0.9.1"
chrono = { version = "0.4", features = ["serde"] }
plotters = "0.3"